--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ rvm:
   - 2.2.1
 before_install: gem install bundler -v 1.12.5
 script: rake
+deploy:
+  provider: rubygems
+  api_key:
+    secure: ahAeEGLzp7Y3lPGTmPC1UeuVkE8WwBmdDu7JXm9Hf5FRc3AIQgf+eEFB+M6jDqithbA5kyC59UwsP/tohwBGRFwPpFrxgFT4dKxjgzec+wR2jlEcoFqUzc9Tug2IHBLIMMhK1Vo7FPJJ3J0Fho+VDlOYnG9nV69Lhf9A82BAPtQ=
+  gem: encipher
+  on:
+    tags: true
+    repo: pcboy/encipher
