--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: ruby
 rvm:
   - 2.2.1
 before_install: gem install bundler -v 1.12.5
-script: rake
+script: bundle exec rake
 deploy:
   provider: rubygems
   api_key:
