--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install bundler
-      run: gem install bundler -v 2.0
+      run: sudo gem install bundler -v 2.0
 
     - name: Install dependencies
       run: |
