--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,4 @@ jobs:
         gem build ncypher.gemspec
         gem push ncypher-*.gem
 
-      if: |
-        github.event_name == 'push' &&
-        startsWith(github.ref, 'refs/tags/') &&
-        github.repository == 'pcboy/ncypher'
+      if: startsWith(github.ref, 'refs/tags/v')
